# local-scar

./: .env.example  .gitignore  DECISIONS.md  README.md  STRUCTURE.md  docker-compose.new.yaml  docker-compose.yaml
_archive/caal/: docker-compose.apple.yaml  voice_agent.py
agent/: .env.example  Dockerfile  README.md  mcp_servers.json.example  pyproject.toml
agent/tests/: __init__.py  conftest.py  test_config.py  test_integrations.py  test_services.py  test_webhooks.py
agent/voice_agent/: __init__.py  bot.py  config.py  webhooks.py
agent/voice_agent/integrations/: __init__.py  mcp.py  n8n.py  web_search.py
agent/voice_agent/services/: __init__.py  chatterbox.py
mobile/: pubspec.yaml
mobile/lib/: app.dart
mobile/lib/controllers/: app_ctrl.dart
mobile/lib/screens/: setup_screen.dart  welcome_screen.dart
mobile/lib/services/: config_service.dart  wake_word_service.dart
pipecat-test/: .env.example  bot.py  pyproject.toml
pipecat-test/services/: __init__.py  chatterbox.py  parakeet.py
web/: .env.example  Dockerfile  eslint.config.js  nginx.conf  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ChatTranscript.tsx  SessionView.tsx  SettingsModal.tsx  WelcomeView.tsx
web/src/hooks/: usePipecat.ts  useWakeWord.ts
